# polyglot-srs

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: config.py  dependencies.py  main.py
backend/jobs/: fit_fsrs_weights.py
backend/repositories/: audit.py  billing.py  cards.py  change_requests.py  contributor.py  curriculum.py  dashboard.py  fsrs_weights.py  gym.py  languages.py  notes.py  onboarding.py  personal_decks.py  pool.py  reader.py  recommendations.py  review.py  tutor.py
backend/routers/: audio.py  auth.py  billing.py  contribute.py  curriculum.py  dashboard.py  gym.py  languages.py  notes.py  onboarding.py  personal_decks.py  reader.py  recommendations.py  review.py  tutor.py
backend/services/: allowance.py  apertium.py  billing.py  define.py  drills.py  email.py  extract.py  fsrs.py  fsrs_optimizer.py  generate.py  generation_admin.py  gym_manifest.py  gym_weight.py  level_estimate.py  models.py  rate_limit.py  reader.py  readings.py  recommend.py  references.py  reminders.py  semantic_check.py  srs.py  srs_stages.py  translate.py  tts.py  tutor.py  tutor_costs.py
backend/tests/: conftest.py  test_adaptive_placement.py  test_apertium.py  test_audio.py  test_auth.py  test_billing.py  test_card_detail.py  test_card_feedback.py  test_contributor.py  test_cram_and_search.py  test_csv_importer.py  test_dashboard_endpoint.py  test_define.py  test_drills.py  test_extract.py  test_fsrs.py  test_fsrs_optimizer.py  test_fsrs_weights.py  test_generate.py  test_generate_curriculum.py  test_grammar_hints.py  test_grammar_seeder.py  test_gym.py  test_gym_manifest.py  test_gym_weight.py  test_harvest_sentences.py  test_models.py  test_morphology_charts.py  test_nlp_arabic.py  test_nlp_base.py  test_nlp_english.py  test_nlp_hausa_xhosa.py  test_nlp_hindi.py  test_nlp_korean.py  test_nlp_latin.py  test_nlp_russian.py  test_nlp_swahili.py  test_nlp_thai.py  test_nlp_turkish.py  test_nlp_yoruba.py  (+29 more)
data/: README.md  ar_frequency.tsv  ar_morphology.json  ar_seed.json  ar_sentences.tsv  ca_frequency.tsv  ca_morphology.json  ca_sentences.tsv  de_frequency.tsv  de_morphology.json  de_sentences.tsv  el_frequency.tsv  el_morphology.json  el_sentences.tsv  en_frequency.tsv  en_translation_overrides.tsv  en_translations.tsv  es_frequency.tsv  es_morphology.json  es_sentences.tsv  fr_frequency.tsv  fr_morphology.json  fr_sentences.tsv  ha_frequency.tsv  ha_sentences.tsv  hi_frequency.tsv  hi_sentences.tsv  it_frequency.tsv  it_morphology.json  it_sentences.tsv  jam_frequency.tsv  jam_sentences.tsv  ko_frequency.tsv  ko_sentences.tsv  mi_frequency.tsv  mi_sentences.tsv  nl_frequency.tsv  nl_sentences.tsv  pt_frequency.tsv  pt_morphology.json  (+21 more)
data/grammar/: ar_grammar.json  ca_grammar.json  de_grammar.json  el_grammar.json  en_drill_hints.ar.json  en_drill_hints.ca.json  en_drill_hints.de.json  en_drill_hints.el.json  en_drill_hints.es.json  en_drill_hints.fr.json  en_drill_hints.ha.json  en_drill_hints.hi.json  en_drill_hints.it.json  en_drill_hints.jam.json  en_drill_hints.mi.json  en_drill_hints.nl.json  en_drill_hints.pt.json  en_drill_hints.ro.json  en_drill_hints.ru.json  en_drill_hints.sw.json  en_drill_hints.th.json  en_drill_hints.tr.json  en_drill_hints.xh.json  en_explanations.es.json  en_explanations.pt.json  en_explanations.ru.json  en_grammar.json  es_grammar.json  fr_grammar.json  ha_grammar.json  hi_grammar.json  it_grammar.json  jam_grammar.json  ko_grammar.json  mi_grammar.json  nl_grammar.json  pt_grammar.json  ro_grammar.json  ru_grammar.json  sw_grammar.json  (+4 more)
data/gym/: ar.json  ca.json  de.json  el.json  en.json  es.json  fr.json  hi.json  it.json  ko.json  nl.json  pt.json  ro.json  ru.json  tr.json
data/sentences/: ca_sentences.tsv  de_sentences.tsv  el_sentences.tsv  es_sentences.tsv  fr_sentences.tsv  ha_sentences.tsv  it_sentences.tsv  jam_sentences.tsv  mi_sentences.tsv  ro_sentences.tsv  ru_sentences.tsv  sw_sentences.tsv  tr_sentences.tsv  xh_sentences.tsv  yo_sentences.tsv
docs/: BUSINESS_PLAN.md  DEPLOY.md  ROADMAP.md  accounts-and-roles.md  admin-generation-first-run.md  claude-db-access.md  content-generation-cli.md  curriculum-design.md  ingestion-interchange.md  resource-library.md  review-workflow.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: backup_db.sh  grant_admin.sh  refresh_seed_data.sh  setup_db.sh
supabase/: config.toml
supabase/migrations/: 20260312000000_initial_schema.sql  20260312000001_rls_policies.sql  20260312000002_seed_languages.sql  20260314000000_vocabulary_unique_word.sql  20260613000000_seed_swahili_turkish.sql  20260613000001_tutor_entitlements.sql  (+67 more)
(+346 files in other folders)
