[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyglot-srs"
version = "0.1.0"
description = "Spaced repetition language learning platform with language-aware answer validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "asyncpg>=0.31",
    "PyJWT>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
