[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyglot-srs"
version = "0.1.0"
description = "Spaced repetition language learning platform with language-aware answer validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "asyncpg>=0.31",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "anthropic>=0.100",        # Claude API — AI tutor feature

    # NLP backends — install before running 02-02 through 02-04
    "pymorphy3>=2.0",          # Russian morphology (community fork of pymorphy2)
    # camel-tools requires Python <=3.12 and system deps (cmake, boost-devel).
    # Install separately: pip install camel-tools && camel_data -i light
    "camel-tools>=1.5.2",      # Arabic NLP (MSA light model)
    "spacy>=3.7",              # English NLP — also run: python -m spacy download en_core_web_sm
    "lemminflect>=0.2.3",      # English inflection for morphological family expansion
    "nltk>=3.8",               # WordNet for English seeder — also run: python -m nltk.downloader wordnet omw-1.4
    "cyrtranslit>=1.1",        # Cyrillic ↔ Latin transliteration for Russian
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests: allow constant-style locals, acronym import aliases, and unused
# fixture vars in TODO-stubbed RLS tests.
"backend/tests/*" = ["N806", "N817", "F841"]
